capstone/k8s/base/enrollment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrollment-service
  labels:
    app.kubernetes.io/name: enrollment-service
    app.kubernetes.io/part-of: learnhub
    app.kubernetes.io/component: api
    app.kubernetes.io/version: "0.1.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: enrollment-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enrollment-service
        app.kubernetes.io/part-of: learnhub
        app.kubernetes.io/component: api
        app.kubernetes.io/version: "0.1.0"
    spec:
      serviceAccountName: learnhub-app
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: main
          image: learnhub/enrollment-service:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: main-http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: main-http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: main-http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: enrollment-service
  labels:
    app.kubernetes.io/name: enrollment-service
    app.kubernetes.io/part-of: learnhub
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: enrollment-service
  ports:
    - name: http
      port: 80
      targetPort: main-http
