capstone/k8s/base/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  labels:
    app.kubernetes.io/name: payment-service
    app.kubernetes.io/part-of: learnhub
    app.kubernetes.io/component: api
    app.kubernetes.io/version: "0.3.0"
spec:
  replicas: 2
  minReadySeconds: 5
  progressDeadlineSeconds: 300
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: payment-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payment-service
        app.kubernetes.io/part-of: learnhub
        app.kubernetes.io/component: api
        app.kubernetes.io/version: "0.3.0"
        learnhub.io/owner: payment-service
    spec:
      serviceAccountName: learnhub-app
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: main
          image: learnhub/payment-service:0.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: main-http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: main-http
            initialDelaySeconds: 3
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /healthz
              port: main-http
            failureThreshold: 12
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: main-http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app.kubernetes.io/name: payment-service
    app.kubernetes.io/part-of: learnhub
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: payment-service
  ports:
    - name: http
      port: 80
      targetPort: main-http
