capstone/k8s/base/web-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  labels:
    app.kubernetes.io/name: web-ui
    app.kubernetes.io/part-of: learnhub
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: "0.1.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-ui
        app.kubernetes.io/part-of: learnhub
        app.kubernetes.io/component: frontend
        app.kubernetes.io/version: "0.1.2"
    spec:
      serviceAccountName: learnhub-app
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
      containers:
        - name: web
          image: learnhub/web-ui:0.1.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  labels:
    app.kubernetes.io/name: web-ui
    app.kubernetes.io/part-of: learnhub
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web-ui
  ports:
    - name: http
      port: 80
      targetPort: http
